# Universal-Timer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md  Universal-Timer-2.sln
Universal-Timer-2/: Resource.rc  Translation_en.ts  Universal-Timer-2.vcxproj  Universal-Timer-2.vcxproj.filters  UniversalTimer2.cpp  UniversalTimer2.h  UniversalTimer2.qrc  UniversalTimer2.ui  cpp.hint
Universal-Timer-2/lang/: en.qm  zh-Classic-Hans.qm
Universal-Timer-2/lang/translation/: translation_en.ts
assets/: UniversalTimer2.qrc
resources/lang/: zh-Classic-Hant.qm
resources/lang/translation/: translation_en.ts  translation_zh-Classic-Hans.ts  translation_zh-Classic-Hant.ts
src/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  FloatingBar.h  FullscreenPagesManager.cpp  FullscreenPagesManager.h  LogManager.h  Logger.h  ReminderPageManager.cpp  ReminderPageManager.h  Resource.rc  SettingsPageManager.cpp  SettingsPageManager.h  UniversalTimer2.cpp  UniversalTimer2.h  UniversalTimer2.ui  WelcomePageManager.cpp  WelcomePageManager.h  main.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  Global.h  UniversalTimer2.cpp  UniversalTimer2.h
src/platform/: Resource.rc
src/ui/: AboutPage.cpp  AboutPage.h  DonatePage.cpp  DonatePage.h  FloatingBar.cpp  FullscreenPagesManager.cpp  FullscreenPagesManager.h  ReminderPage.cpp  ReminderPage.h  ReminderPageManager.cpp  ReminderPageManager.h  ScalableLabel.cpp  ScalableLabel.h  SettingsContent.cpp  SettingsContent.h  SettingsNav.cpp  SettingsNav.h  SettingsPage.cpp  SettingsPage.h  SettingsPageManager.cpp  SettingsPageManager.h  WelcomePage.cpp  WelcomePage.h  WelcomePageManager.cpp
